--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "homepage": "https://danylopriadko9.github.io/react-landing",
+  "homepage": "https://danylopriadko9.github.io",
   "name": "landing-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-scroll": "^1.8.6",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "styled-components": "^5.3.6",
@@ -43,6 +46,12 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^4.0.0",
+    "typescript": "^4.9.5"
   }
 }
