--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://danylopriadko9.github.io",
+  "homepage": "https://danylopriadko9.github.io/react-landing",
   "name": "landing-app",
   "version": "0.1.0",
   "private": true,
